--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "enchante"
-version = "0.1.0"
+version = "0.1.1"
 description = "CLI tool to help scaffolding relational DB architecture as code"
 authors = ["Steven John <steven@stevenjohn.co>"]
 license = "MIT"
@@ -8,11 +8,11 @@ readme = "README.md"
 packages = [{ include = "enchante", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.10"
 pydantic = "^2.1.1"
-SQLAlchemy = "^2.0.19"
+SQLAlchemy = "^2.0"
 alembic = "^1.11.1"
-typer = "^0.9.0"
+typer = ">=0.9.0"
 pyyaml = "^6.0.1"
 jinja2 = "^3.1.4"
 pyhumps = "^3.8.0"
