--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ readme = "README.md"
 packages = [{ include = "enchante", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.10"
 pydantic = "^2.1.1"
-SQLAlchemy = "^2.0.19"
+SQLAlchemy = "^2.0"
 alembic = "^1.11.1"
-typer = "^0.9.0"
+typer = ">=0.9.0"
 pyyaml = "^6.0.1"
 jinja2 = "^3.1.4"
 pyhumps = "^3.8.0"
