--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ typer = ">=0.9.0"
 pyyaml = "^6.0.1"
 jinja2 = "^3.1.4"
 pyhumps = "^3.8.0"
+rich = "^13.7.1"
 
 [tool.poetry.scripts]
 enchante = "enchante.main:app"
